Table users {
  id_user INTEGER [pk, increment]
  username varchar
  firstname varchar
  lastname varchar
  email varchar
  password varchar
  tel varchar
  admin bool
  disabled bool
  registration_date timestamp
}

Table books {
  id_book INTEGER [pk, increment]
  title varchar
  author_id integer
  description text
  anio integer
  isbn varchar
  image text
  stock integer
  subscriber_exclusive bool
  price float
}

Table genres {
  id_genres INTEGER [pk, increment]
  name varchar
}

Table book_genres {
	id_book_genres INTEGER [pk, increment]
	id_genre integer
	id_book integer
}

Table authors {
  id_authors INTEGER [pk, increment]
  name varchar
}

Table user_virtual_books {
  id_user_virtual_books INTEGER [pk, increment]
  id_user integer
  id_book integer
}

Table virtual_book_content {
  id_virtual_book_content INTEGER [pk, increment]
	id_book integer
	content text
}

Table reviews {
  id_reviews INTEGER [pk, increment]
  id_user integer
  id_book integer
  rating smallint
  comment varchar
  review_date timestamp
}

Table user_subscription {
  id_user_subscription INTEGER [pk, increment]
  id_user integer
  start_date timestamp
  end_date timestamp
  ongoing bool
}

Table shopping_cart_book {
  id_shopping_cart_book INTEGER [pk, increment]
  id_user integer
  id_book integer
  amount integer
  virtual bool
}

Table purchases {
  id_purchases INTEGER [pk, increment]
  id_user integer
  id_book integer
  amount integer
  price float
  virtual bool
  purchase_date timestamp
}

Ref: "users"."id_user" < "user_subscription"."id_user"

Ref: "users"."id_user" < "shopping_cart_book"."id_user"

Ref: "users"."id_user" < "purchases"."id_user"

Ref: "users"."id_user" < "reviews"."id_user"

Ref: "users"."id_user" < "user_virtual_books"."id_user"

Ref: "books"."id_book" < "purchases"."id_book"

Ref: "books"."id_book" < "user_virtual_books"."id_book"

Ref: "books"."id_book" < "reviews"."id_book"

Ref: "books"."id_book" < "book_genres"."id_book"

Ref: "books"."id_book" < "shopping_cart_book"."id_book"

Ref: "books"."id_book" < "virtual_book_content"."id_book"

Ref: "genres"."id_genres" < "book_genres"."id_genre"

Ref: "authors"."id_authors" < "books"."author_id"